modified:   .vscode/settings.json 	new file:   src/__pycache__/flowLayout.cpython-37.pyc 	modified:   src/__pycache__/main.cpython-37.pyc 	new file:   src/flowLayout.py 	modified:   src/main.py 	new file:   src/ui/mainUI.ui 	new file:   src/worker.py

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,10 @@
     "python.analysis.extraPaths": [
         "C:\\Program Files\\Side Effects Software\\Houdini 19.5.640\\houdini\\python3.7libs",
         "C:\\Program Files\\Side Effects Software\\Houdini 19.5.640\\python37\\lib\\site-packages-forced"
-    ]
+    ],
+    "python.analysis.autoImportCompletions": true
+
+    
+    
+
 }
