--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
     ],
     "python.analysis.extraPaths": [
         "C:\\Program Files\\Side Effects Software\\Houdini 19.5.640\\houdini\\python3.7libs",
-        "C:\\Program Files\\Side Effects Software\\Houdini 19.5.640\\python37\\lib\\site-packages-forced"
+        "C:\\Program Files\\Side Effects Software\\Houdini 19.5.640\\python37\\lib\\site-packages-forced",
+        "/opt/hfs19.5.493/python/lib/python3.9/site-packages-forced",
+        "/opt/hfs19.5.493/houdini/python3.9libs"
     ],
     "python.analysis.autoImportCompletions": true
 
